"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-11-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-00-merged-router-01-12:
	  Branch merge of chpsim bitrouter case study.


2007-11-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-99:
	  BUG fix (ICE-on-invalid):
		forgot to reject negative array indices, now checked
		prior to passing into unroll_aliases, in
		Object/ref/meta_instance_reference_subtypes.tcc.  
	  Reverted hacc_LDADD libhacktparsers.la, suspecting binutils bug.


	* HACKT-00-01-04-main-00-81-98-merged-ACT-02-07:
	  Branch merge for ACT compatibility.
	  Improved flow-control support for conditionals and loops around
		PRS language bodies, generalized else-if constructs.
	  Also operator '=' (equals) support added.


2007-11-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-12:
	  No source revision, merge to trunk, split-off later for next 
		test case studies.


2007-11-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-95-ACT-02-07:
	  grammar: allow '=' for '==' if wrapped in parens, 
		for ACT-compatbility, includes test parser/basic/oper-{04,05}.  
	  Updated cast2hac documentation.
	  end of branch, merge to trunk


	* HACKT-00-01-04-main-00-81-95-ACT-02-06:
	  Extended PRS to support else-if guarded prs bodies, 
		updated parser/hackt-parse.yy.in, AST/PRS.{h,cc}.
	  Added new test cases in parser/prs.


	* HACKT-00-01-04-main-00-81-95-ACT-02-05:
	  Cleaned up conditional switches as promised.
	  Added new test cases to parser/prs (conditionals).
	  Next: extend grammar/AST for else-if.
	  Later: syntactic-only support for bool directions (!?)


2007-11-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-95-ACT-02-04:
	  Major rework of conditional scopes.