@@ -1,6 +1,6 @@
 # "Make.test-chpsim"
 #	vi: ft=automake
-#	$Id: Make.test-chpsim,v 1.18 2007/11/27 06:10:17 fang Exp $
+#	$Id: Make.test-chpsim,v 1.19 2007/11/30 05:49:46 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -427,11 +427,18 @@ HACKT_CHPSIMRC_TEST_SCRIPTS_BASES = \
 	$(HACKT_CHPSIMRC_TEST_SCRIPTS_PASSES) \
 	$(HACKT_CHPSIMRC_TEST_SCRIPTS_FAILURES)
 
+HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_BASES = \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_PASSES) \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_FAILURES)
+# don't expect randomized tests with failures, do we?
+
 srcdir_EXTRA_DIST += \
 	$(HACKT_CHPSIM_ALLOC_TEST_SUBJECTS:=.expect-chpsimalloc) \
 	$(HACKT_CHPSIMRC_TEST_SUBJECTS:=.hac) \
 	$(HACKT_CHPSIMRC_TEST_SCRIPTS_BASES:=.chpsimrc) \
-	$(HACKT_CHPSIMRC_TEST_SCRIPTS_BASES:=.chpsimrc-expect)
+	$(HACKT_CHPSIMRC_TEST_SCRIPTS_BASES:=.chpsimrc-expect) \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_BASES:=.chpsimrc) \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_BASES:=.chpsimrc-expect)
 
 # all alloc tests and prsimrc tests are candidates for prs-dot tests
 HACKT_CHPSIM_DOT_TEST_SUBJECTS =
@@ -445,6 +452,12 @@ TESTS += \
 	$(HACKT_CHPSIMRC_TEST_SCRIPTS_PASSES:=.chpsimtest) \
 	$(HACKT_CHPSIMRC_TEST_SCRIPTS_FAILURES:=.chpsimfailtest) \
 	$(HACKT_CHPSIM_CKPT_TEST_SCRIPTS_BASES:=.chpsimckpttest)
+
+if RANDOM_TESTS
+TESTS += \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_PASSES:=.chpsimtest) \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_FAILURES:=.chpsimfailtest)
+endif
 endif
 
 HAC_COMPILE_OBJECT_TARGETS += \
@@ -457,6 +470,17 @@ HAC_CREATE_OBJECT_TARGETS += \
 HAC_ALLOC_OBJECT_TARGETS += \
 	$(HACKT_CHPSIMRC_TEST_SUBJECTS:=.haco-a) \
 	$(HACKT_CHPSIM_ALLOC_TEST_SUBJECTS:=.haco-a)
+
+
+CHPSIM_RANDOM_BUILD_CHECK_LOCAL =
+if RANDOM_TESTS
+CHPSIM_RANDOM_BUILD_CHECK_LOCAL += \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_PASSES:=.chpsimrc-out) \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_PASSES:=.chpsimrc-out-filter) \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_PASSES:=.chpsimrc-diff) \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_FAILURES:=.chpsimrcfail-out) \
+	$(HACKT_CHPSIMRC_RANDOM_TEST_SCRIPTS_FAILURES:=.chpsimrcfail-diff)
+endif
 
 build-check-local: \
 	$(HACKT_CHPSIM_ALLOC_TEST_SUBJECTS:=.haco-a) \
@@ -473,7 +497,9 @@ build-check-local: \
 	$(HACKT_CHPSIM_CKPT_TEST_SCRIPTS_BASES:=.chpsimckpt-outdump) \
 	$(HACKT_CHPSIM_CKPT_TEST_SCRIPTS_BASES:=.chpsimckpt-dupe) \
 	$(HACKT_CHPSIM_CKPT_TEST_SCRIPTS_BASES:=.chpsimckpt-indump) \
-	$(HACKT_CHPSIM_CKPT_TEST_SCRIPTS_BASES:=.chpsimckpt-diff)
+	$(HACKT_CHPSIM_CKPT_TEST_SCRIPTS_BASES:=.chpsimckpt-diff) \
+	$(CHPSIM_RANDOM_BUILD_CHECK_LOCAL)
+
 
 ALL_CHPSIM_ALLOC = $(HACKT_CHPSIM_ALLOC_TEST_SUBJECTS:=.expect-chpsimalloc) \
 ALL_CHPSIM_DOT = $(HACKT_CHPSIM_DOT_TEST_SUBJECTS:=.chpsim-event-dot)
