@@ -1,5 +1,5 @@
 # "bitrouter-test-template.chpsimrc
-#	$Id: bitrouter-test-template.chpsimrc,v 1.2 2007/11/27 06:12:46 fang Exp $
+#	$Id: bitrouter-test-template.chpsimrc,v 1.3 2007/11/30 05:49:48 fang Exp $
 # not really needed:
 # @module@ -fno-ack-loaded-fns -L$(top_builddir)/lib -lstdchpfn
 # @deps@ $(top_builddir)/lib/stdchpfn.la
@@ -8,7 +8,9 @@ timing per-event
 echo running (traced) ...
 run
 # due to arbitration, time *may* be different (pseudo-random)
+# echo BEGIN-RANDOM
 time
+# echo END-RANDOM
 echo done.
 # really, is automatic
 
